<?xml version="1.0"?>
<package format="2">
  <name>tortoisebot_waypoints</name>
  <version>0.0.1</version>
  <description>The tortoisebot_waypoints package defines waypoint-following and rostest</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>python3-setuptools</build_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
